Updater, hopefully a working one